Fix issue with swap description text flows out of container if it's big.

--- a/packages/blocks-next/src/blocks/cart-line-items/style.scss
+++ b/packages/blocks-next/src/blocks/cart-line-items/style.scss
@@ -36,6 +36,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+			text-wrap: auto;
 			color: var(--sc-input-label-color);
 			border-radius: 0 0 var(--sc-border-radius-medium)
 				var(--sc-border-radius-medium);
